// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Accessibility Testing Steps Overview > renders default version without crashing 1`] = `
<DocumentFragment>
  <div
    class="508-steps-involved"
  >
    <ol
      class="usa-process-list"
    >
      <li
        class="usa-process-list__item"
      >
        <h3
          class="usa-process-list__heading"
          data-testid="processListHeading"
        >
          Fill out the request form in EASi
        </h3>
        <p>
          Tell the 508 team which system you plan to test.
        </p>
      </li>
      <li
        class="usa-process-list__item"
      >
        <h3
          class="usa-process-list__heading"
          data-testid="processListHeading"
        >
          Prepare and upload the VPAT and Test plan
        </h3>
        Download and fill the VPAT and Test plan from the 
        <a
          class="usa-link"
          href="/508/templates"
          rel="noopener noreferrer"
          target="_blank"
        >
          templates page (opens in a new tab)
        </a>
        . These documents will help the 508 team prepare for testing. Upload your completed documents to EASi for the 508 team to review.
        <p
          class="margin-bottom-0"
        >
          The 508 team will get back to you via email about any changes needed prior to testing.
        </p>
      </li>
      <li
        class="usa-process-list__item"
      >
        <h3
          class="usa-process-list__heading"
          data-testid="processListHeading"
        >
          Attend the testing session
        </h3>
        <p>
          The 508 team will work with you to schedule a testing session and you will test your application together. Depending on the results, you may need to address any issues and retest.
        </p>
      </li>
      <li
        class="usa-process-list__item"
      >
        <h3
          class="usa-process-list__heading"
          data-testid="processListHeading"
        >
          Receive results
        </h3>
        <p>
          Your test score will determine your next steps:
        </p>
        <dl
          title="508 test scores"
        >
          <dt
            class="text-bold display-flex flex-align-center"
          >
            <svg
              class="usa-icon height-3 width-3 margin-right-1 text-success"
              focusable="false"
              height="1em"
              role="img"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0V0zm0 0h24v24H0V0z"
                fill="none"
              />
              <path
                d="M16.59 7.58 10 14.17l-3.59-3.58L5 12l5 5 8-8zM12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
              />
            </svg>
            99% and above
          </dt>
          <dd
            class="margin-left-4 margin-bottom-2"
          >
            508 testing is complete and you can release your application.
          </dd>
          <dt
            class="text-bold display-flex flex-align-center"
          >
            <svg
              class="usa-icon height-3 width-3 margin-right-1 text-warning-dark"
              focusable="false"
              height="1em"
              role="img"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0V0z"
                fill="none"
              />
              <path
                d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
              />
            </svg>
            Between 99% and 75%
          </dt>
          <dd
            class="margin-left-4 margin-bottom-2"
          >
            You can release your application but you will need fix the issues and retest within a year. You need to submit a remediation plan as a part of retesting.
          </dd>
          <dt
            class="text-bold display-flex flex-align-center"
          >
            <svg
              class="usa-icon height-3 width-3 margin-right-1 text-error"
              focusable="false"
              height="1em"
              role="img"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M14.59 8 12 10.59 9.41 8 8 9.41 10.59 12 8 14.59 9.41 16 12 13.41 14.59 16 16 14.59 13.41 12 16 9.41 14.59 8zM12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
              />
            </svg>
            75% and below
          </dt>
          <dd
            class="margin-left-4"
          >
            You cannot release your application. You need to fix all issues right away and retest.
          </dd>
        </dl>
      </li>
    </ol>
    <div
      class="easi-collapsable-link"
    >
      <button
        aria-controls="easi-508-testing-exception"
        aria-expanded="false"
        class="usa-button usa-button--unstyled display-flex flex-align-center display-flex flex-align-center"
        data-testid="collapsable-link"
        type="button"
      >
        <svg
          class="usa-icon margin-right-05"
          focusable="false"
          height="1em"
          role="img"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
          />
        </svg>
        What if I need an exception from 508 testing?
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Accessibility Testing Steps Overview > renders help section version without crashing 1`] = `
<DocumentFragment>
  <div
    class="508-steps-involved"
  >
    <div
      class="easi-collapsable-link"
    >
      <button
        aria-controls="easi-508-testing-exception"
        aria-expanded="false"
        class="usa-button usa-button--unstyled display-flex flex-align-center display-flex flex-align-center margin-bottom-4"
        data-testid="collapsable-link"
        type="button"
      >
        <svg
          class="usa-icon margin-right-05"
          focusable="false"
          height="1em"
          role="img"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
          />
        </svg>
        What if I need an exception from 508 testing?
      </button>
    </div>
    <ol
      class="usa-process-list"
    >
      <li
        class="usa-process-list__item grid-col-8 position-static maxw-desktop"
      >
        <h3
          class="usa-process-list__heading"
          data-testid="processListHeading"
        >
          Fill out the request form in EASi
        </h3>
        <p>
          Tell the 508 team which system you plan to test.
        </p>
      </li>
      <li
        class="usa-process-list__item grid-col-8 position-static maxw-desktop"
      >
        <h3
          class="usa-process-list__heading"
          data-testid="processListHeading"
        >
          Prepare and upload the VPAT and Test plan
        </h3>
        Download and fill the VPAT and Test plan from the 
        <a
          class="usa-link"
          href="/508/templates"
          rel="noopener noreferrer"
          target="_blank"
        >
          templates page (opens in a new tab)
        </a>
        . These documents will help the 508 team prepare for testing. Upload your completed documents to EASi for the 508 team to review.
        <p
          class="margin-bottom-0"
        >
          The 508 team will get back to you via email about any changes needed prior to testing.
        </p>
      </li>
      <li
        class="usa-process-list__item grid-col-8 position-static maxw-desktop"
      >
        <h3
          class="usa-process-list__heading"
          data-testid="processListHeading"
        >
          Attend the testing session
        </h3>
        <p>
          The 508 team will work with you to schedule a testing session and you will test your application together. Depending on the results, you may need to address any issues and retest.
        </p>
      </li>
      <li
        class="usa-process-list__item grid-col-8 position-static maxw-desktop"
      >
        <h3
          class="usa-process-list__heading"
          data-testid="processListHeading"
        >
          Receive results
        </h3>
        <p>
          Your test score will determine your next steps:
        </p>
        <dl
          title="508 test scores"
        >
          <dt
            class="text-bold display-flex flex-align-center"
          >
            <svg
              class="usa-icon height-3 width-3 margin-right-1 text-success"
              focusable="false"
              height="1em"
              role="img"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0V0zm0 0h24v24H0V0z"
                fill="none"
              />
              <path
                d="M16.59 7.58 10 14.17l-3.59-3.58L5 12l5 5 8-8zM12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
              />
            </svg>
            99% and above
          </dt>
          <dd
            class="margin-left-4 margin-bottom-2"
          >
            508 testing is complete and you can release your application.
          </dd>
          <dt
            class="text-bold display-flex flex-align-center"
          >
            <svg
              class="usa-icon height-3 width-3 margin-right-1 text-warning-dark"
              focusable="false"
              height="1em"
              role="img"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0V0z"
                fill="none"
              />
              <path
                d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
              />
            </svg>
            Between 99% and 75%
          </dt>
          <dd
            class="margin-left-4 margin-bottom-2"
          >
            You can release your application but you will need fix the issues and retest within a year. You need to submit a remediation plan as a part of retesting. You can download the Remediation Plan from the 
            <a
              class="usa-link"
              href="/508/templates"
              target="_blank"
            >
              templates page (opens in a new tab)
            </a>
            .
          </dd>
          <dt
            class="text-bold display-flex flex-align-center"
          >
            <svg
              class="usa-icon height-3 width-3 margin-right-1 text-error"
              focusable="false"
              height="1em"
              role="img"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M14.59 8 12 10.59 9.41 8 8 9.41 10.59 12 8 14.59 9.41 16 12 13.41 14.59 16 16 14.59 13.41 12 16 9.41 14.59 8zM12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
              />
            </svg>
            75% and below
          </dt>
          <dd
            class="margin-left-4"
          >
            You cannot release your application. You need to fix all issues right away and retest.
          </dd>
        </dl>
      </li>
    </ol>
  </div>
</DocumentFragment>
`;

exports[`Accessibility Testing Steps Overview renders default version without crashing 1`] = `
<DocumentFragment>
  <div
    class="508-steps-involved"
  >
    <ol
      class="usa-process-list"
    >
      <li
        class="usa-process-list__item"
      >
        <h3
          class="usa-process-list__heading"
          data-testid="processListHeading"
        >
          Fill out the request form in EASi
        </h3>
        <p>
          Tell the 508 team which system you plan to test.
        </p>
      </li>
      <li
        class="usa-process-list__item"
      >
        <h3
          class="usa-process-list__heading"
          data-testid="processListHeading"
        >
          Prepare and upload the VPAT and Test plan
        </h3>
        Download and fill the VPAT and Test plan from the 
        <a
          class="usa-link"
          href="/508/templates"
          rel="noopener noreferrer"
          target="_blank"
        >
          templates page (opens in a new tab)
        </a>
        . These documents will help the 508 team prepare for testing. Upload your completed documents to EASi for the 508 team to review.
        <p
          class="margin-bottom-0"
        >
          The 508 team will get back to you via email about any changes needed prior to testing.
        </p>
      </li>
      <li
        class="usa-process-list__item"
      >
        <h3
          class="usa-process-list__heading"
          data-testid="processListHeading"
        >
          Attend the testing session
        </h3>
        <p>
          The 508 team will work with you to schedule a testing session and you will test your application together. Depending on the results, you may need to address any issues and retest.
        </p>
      </li>
      <li
        class="usa-process-list__item"
      >
        <h3
          class="usa-process-list__heading"
          data-testid="processListHeading"
        >
          Receive results
        </h3>
        <p>
          Your test score will determine your next steps:
        </p>
        <dl
          title="508 test scores"
        >
          <dt
            class="text-bold display-flex flex-align-center"
          >
            <svg
              class="usa-icon height-3 width-3 margin-right-1 text-success"
              focusable="false"
              height="1em"
              role="img"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0V0zm0 0h24v24H0V0z"
                fill="none"
              />
              <path
                d="M16.59 7.58 10 14.17l-3.59-3.58L5 12l5 5 8-8zM12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
              />
            </svg>
            99% and above
          </dt>
          <dd
            class="margin-left-4 margin-bottom-2"
          >
            508 testing is complete and you can release your application.
          </dd>
          <dt
            class="text-bold display-flex flex-align-center"
          >
            <svg
              class="usa-icon height-3 width-3 margin-right-1 text-warning-dark"
              focusable="false"
              height="1em"
              role="img"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0V0z"
                fill="none"
              />
              <path
                d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
              />
            </svg>
            Between 99% and 75%
          </dt>
          <dd
            class="margin-left-4 margin-bottom-2"
          >
            You can release your application but you will need fix the issues and retest within a year. You need to submit a remediation plan as a part of retesting.
          </dd>
          <dt
            class="text-bold display-flex flex-align-center"
          >
            <svg
              class="usa-icon height-3 width-3 margin-right-1 text-error"
              focusable="false"
              height="1em"
              role="img"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M14.59 8 12 10.59 9.41 8 8 9.41 10.59 12 8 14.59 9.41 16 12 13.41 14.59 16 16 14.59 13.41 12 16 9.41 14.59 8zM12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
              />
            </svg>
            75% and below
          </dt>
          <dd
            class="margin-left-4"
          >
            You cannot release your application. You need to fix all issues right away and retest.
          </dd>
        </dl>
      </li>
    </ol>
    <div
      class="easi-collapsable-link"
    >
      <button
        aria-controls="easi-508-testing-exception"
        aria-expanded="false"
        class="usa-button usa-button--unstyled display-flex flex-align-center display-flex flex-align-center"
        data-testid="collapsable-link"
        type="button"
      >
        <svg
          class="usa-icon margin-right-05"
          focusable="false"
          height="1em"
          role="img"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
          />
        </svg>
        What if I need an exception from 508 testing?
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Accessibility Testing Steps Overview renders help section version without crashing 1`] = `
<DocumentFragment>
  <div
    class="508-steps-involved"
  >
    <div
      class="easi-collapsable-link"
    >
      <button
        aria-controls="easi-508-testing-exception"
        aria-expanded="false"
        class="usa-button usa-button--unstyled display-flex flex-align-center display-flex flex-align-center margin-bottom-4"
        data-testid="collapsable-link"
        type="button"
      >
        <svg
          class="usa-icon margin-right-05"
          focusable="false"
          height="1em"
          role="img"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
          />
        </svg>
        What if I need an exception from 508 testing?
      </button>
    </div>
    <ol
      class="usa-process-list"
    >
      <li
        class="usa-process-list__item grid-col-8 position-static maxw-desktop"
      >
        <h3
          class="usa-process-list__heading"
          data-testid="processListHeading"
        >
          Fill out the request form in EASi
        </h3>
        <p>
          Tell the 508 team which system you plan to test.
        </p>
      </li>
      <li
        class="usa-process-list__item grid-col-8 position-static maxw-desktop"
      >
        <h3
          class="usa-process-list__heading"
          data-testid="processListHeading"
        >
          Prepare and upload the VPAT and Test plan
        </h3>
        Download and fill the VPAT and Test plan from the 
        <a
          class="usa-link"
          href="/508/templates"
          rel="noopener noreferrer"
          target="_blank"
        >
          templates page (opens in a new tab)
        </a>
        . These documents will help the 508 team prepare for testing. Upload your completed documents to EASi for the 508 team to review.
        <p
          class="margin-bottom-0"
        >
          The 508 team will get back to you via email about any changes needed prior to testing.
        </p>
      </li>
      <li
        class="usa-process-list__item grid-col-8 position-static maxw-desktop"
      >
        <h3
          class="usa-process-list__heading"
          data-testid="processListHeading"
        >
          Attend the testing session
        </h3>
        <p>
          The 508 team will work with you to schedule a testing session and you will test your application together. Depending on the results, you may need to address any issues and retest.
        </p>
      </li>
      <li
        class="usa-process-list__item grid-col-8 position-static maxw-desktop"
      >
        <h3
          class="usa-process-list__heading"
          data-testid="processListHeading"
        >
          Receive results
        </h3>
        <p>
          Your test score will determine your next steps:
        </p>
        <dl
          title="508 test scores"
        >
          <dt
            class="text-bold display-flex flex-align-center"
          >
            <svg
              class="usa-icon height-3 width-3 margin-right-1 text-success"
              focusable="false"
              height="1em"
              role="img"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0V0zm0 0h24v24H0V0z"
                fill="none"
              />
              <path
                d="M16.59 7.58 10 14.17l-3.59-3.58L5 12l5 5 8-8zM12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
              />
            </svg>
            99% and above
          </dt>
          <dd
            class="margin-left-4 margin-bottom-2"
          >
            508 testing is complete and you can release your application.
          </dd>
          <dt
            class="text-bold display-flex flex-align-center"
          >
            <svg
              class="usa-icon height-3 width-3 margin-right-1 text-warning-dark"
              focusable="false"
              height="1em"
              role="img"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0V0z"
                fill="none"
              />
              <path
                d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
              />
            </svg>
            Between 99% and 75%
          </dt>
          <dd
            class="margin-left-4 margin-bottom-2"
          >
            You can release your application but you will need fix the issues and retest within a year. You need to submit a remediation plan as a part of retesting. You can download the Remediation Plan from the 
            <a
              class="usa-link"
              href="/508/templates"
              target="_blank"
            >
              templates page (opens in a new tab)
            </a>
            .
          </dd>
          <dt
            class="text-bold display-flex flex-align-center"
          >
            <svg
              class="usa-icon height-3 width-3 margin-right-1 text-error"
              focusable="false"
              height="1em"
              role="img"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M14.59 8 12 10.59 9.41 8 8 9.41 10.59 12 8 14.59 9.41 16 12 13.41 14.59 16 16 14.59 13.41 12 16 9.41 14.59 8zM12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
              />
            </svg>
            75% and below
          </dt>
          <dd
            class="margin-left-4"
          >
            You cannot release your application. You need to fix all issues right away and retest.
          </dd>
        </dl>
      </li>
    </ol>
  </div>
</DocumentFragment>
`;
